[package]
name = "redirect-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1.1.6"
serde_json = "1.0.71"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

